Revise index.html structure and add content

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>title</title>
-  </head>
-  <body>
-    <!-- page content -->
-  </body>
+<head>
+    <title>Min</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1 id="title">Static HTML</h1>
+    <button id="btn">Click</button>
+    <script src="script.js"></script>
+</body>
 </html>
