--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Static HTML</h1>
+    <h1 id="title">Static HTML vol 2</h1>
     <button id="btn">Click</button>
     <script src="script.js"></script>
 </body>
